--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -99,7 +99,7 @@ $(function() {
         text == "Show more" ? "Show less" : "Show more");
   })
   $('body').on('click','.replyEmojiWindowButton', function() {
-    $(this).closest('#replyForm').find('.replyEmojiWindow').slideToggle("fast");
+    $(this).closest('.contentForm').find('.replyEmojiWindow').slideToggle("fast");
   })
   $('body').on('click','.replyEmojiWindow>.add-emoji', function() {
     pasteHtmlAtCaret($(this).closest("#replyForm").find('.editable-comment-content.medium-editor-element'), '<span class="emoji"> ' + event.target.innerHTML + '</span>');
@@ -155,7 +155,12 @@ $(function() {
         text == "Show post" ? "Hide post" : "Show post");
   })
   $('body').on('click', '.replyToComment', function() {
-    pasteHtmlAtCaret($(this).closest(".replyContainer").children("#replyForm").find('.editable-comment-content.medium-editor-element'), "@" + $(this).attr("data-username")+"&nbsp;");
+    // pasteHtmlAtCaret($(this).closest(".replyContainer").children("#replyForm").find('.editable-comment-content.medium-editor-element'), "@" + $(this).attr("data-username")+"&nbsp;");
+    var commentContainer = $(this).closest('.individualReplyContainer');
+    var postID = commentContainer.closest('.commentContainer').attr("data-post-id");
+    var commentID = commentContainer.attr("data-comment-id");
+    commentContainer.append('<div class="childReplyForm contentForm"><div class="form-row"><textarea class="form-control form-control-sm comment-textarea editable-text editable-comment-content" id="commentContent" name="commentContent" style="resize: none;" placeholder="Write a reply." maxlength="9000"></textarea></div><div class="form-row my-2 card p-1 replyEmojiWindow" style="display:none"><button type="button" class="add-emoji">🍬</button><button type="button" class="add-emoji">🍭</button><button type="button" class="add-emoji">🍡</button><button type="button" class="add-emoji">🍩</button><button type="button" class="add-emoji">🍪</button><button type="button" class="add-emoji">🍫</button><button type="button" class="add-emoji">🎂</button<button type="button" class="add-emoji">🍯</button><button type="button" class="add-emoji">🍎</button><button type="button" class="add-emoji">🍑</button><button type="button" class="add-emoji">🍌</button><button type="button" class="add-emoji">🍓</button><button type="button" class="add-emoji">🍇</button><button type="button" class="add-emoji">🍉</button><button type="button" class="add-emoji">🐝</button><button type="button" class="add-emoji">😊</button><button type="button" class="add-emoji">🙃</button><button type="button" class="add-emoji">😍</button><button type="button" class="add-emoji">😂</button><button type="button" class="add-emoji">😭</button><button type="button" class="add-emoji">😬</button><button type="button" class="add-emoji">😆</button><button type="button" class="add-emoji">😩</button><button type="button" class="add-emoji">😩</button><button type="button" class="add-emoji">😱</button><button type="button" class="add-emoji">😒</button><button type="button" class="add-emoji">🖖</button><button type="button" class="add-emoji">🙌</button><button type="button" class="add-emoji">👏</button><button type="button" class="add-emoji">👌</button><button type="button" class="add-emoji">💪</button><button type="button" class="add-emoji">🤦</button><button type="button" class="add-emoji">🌱</button><button type="button" class="add-emoji">🌞</button><button type="button" class="add-emoji">🌝</button><button type="button" class="add-emoji">❤️</button><button type="button" class="add-emoji">💕</button><button type="button" class="add-emoji">💖</button><button type="button" class="add-emoji">🔥</button><button type="button" class="add-emoji">🎉</button><button type="button" class="add-emoji">💯</button><button type="button" class="add-emoji">🏳️‍🌈</button></div><div id="image-preview-holder" class="form-row post-controls image-preview-holder"><input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose File" name="postImage" multiple></div><div id="replyControlsRow" class="form-row mt-2 post-controls"><div class="leftSideControls"><button type="button" class="btn btn-primary btn-fade" id="postImageButton"><i class="fas fa-image"></i></button><button type="button" class="btn btn-primary btn-fade replyEmojiWindowButton"><i class="far fa-smile"></i></button></div><div class="rightSideControls"><button type="submit" class="btn btn-primary btn-fade postReply childReply" data-comment-id="' + commentID + '" data-post-id="' + postID + '">Reply <i class="fas fa-chevron-right"></i></button></div></div></div>');
+    reapplyEditor();
   })
   $('body').on('click', '.deletePost', function() {
     var element = $(this);
@@ -191,12 +196,18 @@ $(function() {
     });
   })
   $('body').on('click', '.postReply', function() {
+    let replyType = ($(this).hasClass('childReply')) ? "child" : "primary";
     let commentButton = $(this);
-    let replyForm = commentButton.closest('#replyForm');
+    let replyForm = commentButton.closest('.contentForm');
     let textarea = replyForm.find("textarea.comment-textarea");
     let contentEditable = replyForm.find("div.comment-textarea");
     let commentContent = textarea.val();
-    let commentsContainer = commentButton.closest('.replyContainer').find('.repliesContainer');
+    if (replyType == "primary") {
+        let commentsContainer = commentButton.closest('.replyContainer').find('.repliesContainer');
+    }
+    else if (replyType == "child") {
+        let commentsContainer = commentButton.closest('.replyContainer').find('.individualReplyContainer');
+    }
     let emojiWindow = replyForm.find('.replyEmojiWindow');
 
     let pc = replyForm.find('#image-preview-holder')[0];
@@ -219,7 +230,7 @@ $(function() {
 
     if (commentContent.replace(/<[^>]*>/g, "") != "" || sortedurls.length > 0) { // Filter out empty comments
       commentButton.prop('disabled', true);
-      $.post("/createcomment/"+$(this).attr("data-post-id"),
+      $.post("/createcomment/"+replyType+"/"+$(this).attr("data-post-id")+"/"+$(this).attr("data-comment-id"),
       { commentContent: commentContent,
         imageUrls: JSON.stringify(sortedurls),
         imageDescs: JSON.stringify(imagedescs)
@@ -230,7 +241,7 @@ $(function() {
           contentEditable.html("");
           console.log(sortedurls.length)
           classNames = ['one-image','two-images','three-images','four-images'];
-          let html = '<div class="individualReplyContainer"><div class="mb-1 d-flex"><img class="postAuthorImage" style="width:25px;height:25px;border-radius:3px;" src="/images/' + data.image + '" /><div class="comment-header"><div class="comment-header-row-1">' + data.name + '<div class="comment-header-divider">&middot;</div><div class="commentTimestamp"><small class="text-muted">' + data.timestamp + '</small></div><button type="button" class="btn btn-link btn-xs replyToComment comment-button" data-username="' + data.username + '"><i class="fas fa-reply"></i></button><button type="button" class="btn btn-link btn-xs deleteComment comment-button" id="'+ data.comment_id + '" data-post-id="' + data.post_id + '" data-comment-id="'+data.comment_id+'">&times;</button></div></div></div><div class="comment-content">' + data.content + (sortedurls.length>0 ? '<div class="post-images '+classNames[sortedurls.length-1]+'"'+(sortedurls.length>1 ? ' data-featherlight-gallery data-featherlight-filter="a"' : '')+'>' : '');
+          let html = '<div class="individualReplyContainer" data-comment-id="'+ data.comment_id + '"><div class="mb-1 d-flex"><img class="postAuthorImage" style="width:25px;height:25px;border-radius:3px;" src="/images/' + data.image + '" /><div class="comment-header"><div class="comment-header-row-1">' + data.name + '<div class="comment-header-divider">&middot;</div><div class="commentTimestamp"><small class="text-muted">' + data.timestamp + '</small></div><button type="button" class="btn btn-link btn-xs replyToComment comment-button" data-username="' + data.username + '"><i class="fas fa-reply"></i></button><button type="button" class="btn btn-link btn-xs deleteComment comment-button" id="'+ data.comment_id + '" data-post-id="' + data.post_id + '" data-comment-id="'+data.comment_id+'">&times;</button></div></div></div><div class="comment-content">' + data.content + (sortedurls.length>0 ? '<div class="post-images '+classNames[sortedurls.length-1]+'"'+(sortedurls.length>1 ? ' data-featherlight-gallery data-featherlight-filter="a"' : '')+'>' : '');
           for (let i=0; i<sortedurls.length;i++){
             html += (sortedurls.length>1 ? '<a href="/api/image/display/'+sortedurls[i]+'">' : '')+'<img alt="'+imagedescs[i]+' (posted by '+$('.navbar-username')[0].innerHTML+')" class="post-single-image" src="/api/image/display/'+sortedurls[i]+'" '+(sortedurls.length==1 ? 'data-featherlight="/api/image/display/'+sortedurls[i]+'"' : '')+'>'+(sortedurls.length>1 ? '</a>' : '');
           }
@@ -241,7 +252,7 @@ $(function() {
           let counterToChange = commentButton.closest(".commentContainer").find(".openReplyBox").find('.comments-number')[0];
           if(counterToChange.textContent === ""){
             counterToChange.innerHTML = "1";
-          }else{
+          } else {
             let newCommentCount = parseInt(counterToChange.textContent)+1;
             counterToChange.innerHTML = counterToChange.innerHTML.replace((newCommentCount-1), newCommentCount);
           }
