New 'new notifications' icon; fixed settings dropdown text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,9 +83,6 @@ hr {
 #topNav .dropdown-item {
   color: #666;
 }
-.notifications-count {
-  background-color: rgb(108, 117, 125);
-}
 .userForm {
   background: #fff;
   border: 1px solid #e7e7e7;
@@ -582,10 +579,11 @@ hr {
 }
 
 .notifications-count {
-  font-size: 0.5em;
-  position: absolute;
-  top: -5px;
-  left: 7px;
+    font-size: 14px;
+    position: absolute;
+    top: -6px;
+    left: 9px;
+    /* color: #ce1717; */
 }
 
 @media (min-width: 839px) {
@@ -594,8 +592,8 @@ hr {
     display: inline;
   }
   .notifications-count {
-    top: -2px;
-    left: 7px;
+      top: -4px;
+      left: 9px;
   }
   #navbarLeftGroup .nav-item:not(:last-child) {
     padding-right: 2rem;
